# tilt

./: .gitignore  FILTER.md  README.md  pyproject.toml
.github/workflows/: monthly.yml
data/: etf_catalogue.csv  etf_history.csv  history.jsonl  prices.parquet
docs/: history.json  index.html
scripts/: backfill_history.py  build_catalogue.py  compare_rebalance.py  fetch.py  peek_june.py  probe_history.py  run_monthly.py
src/tilt/: __init__.py  dashboard.py  engine.py  fetch.py  palantir.py  universe.py
