[project]
name = "tilt"
version = "0.1.0"
description = "Monthly ETF rotation by 12-month momentum. Two picks, one signal."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "pyarrow>=15.0",
    "yfinance>=0.2.40",
    "requests>=2.30",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
